fix squid game link

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                             </li>
                         </ul>
                         </div>
-                        <div class="flex-shrink-0"><a href="https://quickly-healthy.herokuapp.com/#/" class="text-primary">LIVE</a></div>
+                        <div class="flex-shrink-0"><a href="https://lyhourlay1.github.io/Squid_Game_In_Your_Area/" class="text-primary">LIVE</a></div>
                         <p>&nbsp; &nbsp; &nbsp;</p>
-                        <div class="flex-shrink-0"><a href="https://github.com/lyhourlay1/Quickly-healthy" class="text-primary">GITHUB</a></div>                    
+                        <div class="flex-shrink-0"><a href="https://github.com/lyhourlay1/Squid_Game_In_Your_Area" class="text-primary">GITHUB</a></div>                    
                     </div>
                 </div>
             </section>
