--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Hello, this is my portfolio. It consists of my previous roles, skills, and achievements. Thank you for your time." />
+        <meta name="author" content="Lyhour Lay" />
+        <meta property="og:title" content="Squid Game In Your AREA" />
+        <meta property="og:image" content="assets/img/portfolio_pic.png" />
+        <meta property="og:url" content="https://lyhourlay1.github.io/portfolio/" />
         <title>Resume - Start Bootstrap Theme</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
