--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Hello, this is my portfolio. It consists of my previous roles, skills, and achievements. Thank you for your time." />
+        <meta name="description" content="Hello, this is my portfolio. It consists of my previous roles, skills, and achievements. Thank you for your time. Feel free to contact me if you have any questions through lyhourlay1@gmail.com" />
         <meta name="author" content="Lyhour Lay" />
         <meta property="og:title" content="Squid Game In Your AREA" />
         <meta property="og:image" content="assets/img/portfolio_pic.png" />
@@ -35,8 +35,6 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                </ul>
             </div>
         </nav>
         <!-- Page Content-->
