--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Hello, this is my portfolio. It consists of my previous roles, skills, and achievements. Thank you for your time. Feel free to contact me if you have any questions through lyhourlay1@gmail.com" />
+        <meta property="og:description" content="Hello, this is my portfolio. It consists of my previous roles, skills, and achievements. Thank you for your time. Feel free to contact me if you have any questions through lyhourlay1@gmail.com" />
         <meta name="author" content="Lyhour Lay" />
         <meta property="og:title" content="Squid Game In Your AREA" />
         <meta property="og:image" content="assets/img/portfolio_pic.png" />
