--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="Portfolio" />
         <meta property="og:image" content="assets/img/portfolio_pic.png" />
         <meta property="og:url" content="https://lyhourlay1.github.io/portfolio/" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Resume - Lyhour Lay</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
