modify the link

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><a href="https://quickly-healthy.herokuapp.com/#/" class="text-primary">LIVE</a></div>
+                        <div class="flex-shrink-0"><a href="https://bamazon-lyhour.herokuapp.com/#/" class="text-primary">LIVE</a></div>
                         <p>&nbsp; &nbsp; &nbsp;</p>
-                        <div class="flex-shrink-0"><a href="https://github.com/lyhourlay1/Quickly-healthy" class="text-primary">GITHUB</a></div>                    </div>
+                        <div class="flex-shrink-0"><a href="https://github.com/lyhourlay1/Bamazon" class="text-primary">GITHUB</a></div>                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Quickly Healthy</h3>
@@ -162,7 +162,7 @@
                                     Operated 30 cell lines starting from thawing to banking and inoculating in an agile and fast paced work environment
                                 </li>
                                 <li>
-                                    Trained new employees with aseptic techniques and cell culture procedures to sure to help them quickly picking up projects
+                                    Trained new employees with aseptic techniques and cell culture procedures to help them quickly picking up projects
                                 </li>
                             </ul>
                         </div>
