fix: working in progress

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         <span class="text-primary">Lay</span>
                     </h1>
                     <div class="subheading mb-5">
-                        San Diego · (951) 331-8309 
+                        San Francisco · (951) 331-8309 
                         <a href="mailto:lyhourlay1@gmail.com">lyhourlay1@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a full stack developer with a passion in improving the process and making the product more available and convenient to consumers.</p>
+                    <p class="lead mb-5">I am a full stack engineer with 3 years experience at a fast paced biotech startup. My technical expertise are Rest API and Database Design</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/lyhour/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/lyhourlay1"><i class="fab fa-github"></i></a>
